--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+aiofiles==23.2.1
 aiogram==2.25.2
+aiohappyeyeballs==2.6.1
 aiohttp==3.8.6
 aiosignal==1.3.2
+annotated-types==0.7.0
+asgiref==3.8.1
 async-timeout==4.0.3
 attrs==25.3.0
 Babel==2.9.1
 certifi==2025.4.26
 charset-normalizer==3.4.1
+Django==5.2.3
 environs==14.1.1
 frozenlist==1.6.0
 idna==3.10
@@ -13,6 +18,12 @@ magic-filter==1.0.12
 marshmallow==4.0.0
 multidict==6.4.3
 propcache==0.3.1
+pydantic==2.5.3
+pydantic_core==2.14.6
 python-dotenv==1.1.0
 pytz==2025.2
+requests==2.32.3
+sqlparse==0.5.3
+typing_extensions==4.13.2
+urllib3==2.4.0
 yarl==1.20.0
